# AutoCutAI-Autonomous-AI-Video-Editor-that-Understands-Semiotics-Rhythm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  bb-extract.cpp  bb_counts.csv  jnorm.cpp  pyproject.toml  seed_input  target.c  target.patch  target_patched.c  wtmm.cpp
.github/workflows/: chaos-check.yml  ci.yml
ci/: 0-setup.sh  1-trace.sh  10-seal.sh  2-embed.py  3-wtmm.sh  4-causal.sh  4-pcmci.py  5-cbmc.sh  6-contract.sh  9-entropy.sh
docs/: ci-and-native-tools.md
fixtures/chaos/: test-suite.csv
notebooks/: README.md
src/autocutai/: __init__.py
src/autocutai/editor/: __init__.py  contract.py  render.py  utils.py  v1.py
src/autocutai/math/: __init__.py  thresholds.py
src/autocutai/perception/: __init__.py
src/autocutai/perception/audio/: __init__.py  v1.py
src/autocutai/perception/video/: __init__.py
tests/: test.out
tests/editor/: test_editor_v1.py
tests/math/: test_threshold_sync.py
tests/perception/audio/: test_v1.py
